--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,10 +20,11 @@ stages:
     pool:
       vmImage: ubuntu-latest
     steps:
+
     - task: Docker@2
-      displayName: Build an image
+      displayName: Build and push petstore web
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/jpetstore/Dockerfile'
-        tags: |
-          $(tag)
+        repository: 'mcmpdemo/jpetstore-web'
+        command: 'buildAndPush'
+        Dockerfile: '**/jpetstore-web/Dockerfile'
+        
