--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,5 +26,5 @@ stages:
       inputs:
         repository: 'mcmpdemo/jpetstore-web'
         command: 'buildAndPush'
-        Dockerfile: '**/jpetstore-web/Dockerfile'
-        
+        Dockerfile: '**/jpetstore/Dockerfile'
+
