Adding pph response for ado pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,7 +12,7 @@ resources:
 
 variables:
   ORDER_ID: 'default'
-  FULFILLMENT_ID: 'defaultfulf'
+  FULFILLMENT_ID: '$(FULFILLMENT_ID:)'
   tag: '$(Build.BuildId)'
 
 stages:
