Adding pph response for ado pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,7 @@ resources:
       connection: ModernOps
 
 variables:
+  ORDER_ID: ${{ parameters.WebHook.resource.message.title }}
   tag: '$(Build.BuildId)'
 
 stages:
