Adding pph response for ado pipeline

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ resources:
       connection: ModernOps
 
 variables:
-  ORDER_ID: ${{ parameters.WebHook.resource.message.title }}
+  ORDER_ID: '${{ parameters.WebHook.resource.message.title }}''
   tag: '$(Build.BuildId)'
 
 stages:
