--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -3,7 +3,7 @@
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
 
 trigger:
-  - master
+- master
 
 resources:
   webhooks:
@@ -11,8 +11,7 @@ resources:
       connection: ModernOps
 
 variables:
-  ORDER_ID: '${{ parameters.WebHook.resource.message.title }}'
-  
+  tag: '$(Build.BuildId)'
 
 stages:
 - stage: Build
